# scopix

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  wake.sh
.ipynb_checkpoints/: CorticalColumns-checkpoint.ipynb
Athena/: Athena.py  requirements.txt  wake.py
Athena/_src/: CrystalMemory.py
Athena/_src/config/: CrystalMemoryConfig.py
Athena/_src/logger/: WANDB.py
Athena/_src/memory/: CrystalMemory.py  FlashMemory.py
Athena/_src/networks/DummyNet/: Constructor.py  DummyNet.py
Athena/moduels/: Athena.py  Orchistrator.py
Athena/moduels/input/Text/: Text.py
_src/dataset/: arc2.py  mnist.py
_src/logger/: WANDB.py  loader.py
_src/networks/DummyNet/: Constructor.py  DummyNet.py
_src/networks/ToyNet/: ToyNet.py
config/: models.py
config/dataset/: arc2_toy.yaml  mnist_toy.yaml
config/logger/: wandb.yaml
config/model/: dummy_toy.yaml  toynet.yaml
docs/: conf.py  index.rst
examples/: CorticalColumns.ipynb  dummy_model_example.py  dummy_net_arc2_toy.py  dummy_net_mnist_toy.py  toy_model_example.py
experiments/: dummy_net_arc2_toy.py  toy_net_arc2_toy.py
moduels/: orchistrator.py
scopix/: __init__.py
scopix/dataset/: arc2.py  cifar10.py
scopix/logger/: WANDB.py
scopix/models/DummyNet/: DummyNet.py
scopix/models/ToyNet/: Constructor.py  ToyNet.py
scripts/: dataset_mnist.sh
tests/: test_models.py
